# zephyr-http-server

./: .clangd  CMakeLists.txt  prj.conf  sections-rom.ld
main/assets/static/: index.html
main/assets/static/assets/: index-CMsMUEW9.css  index-Crb4-Qo3.js
main/assets/static/page1/page3/: index.html
main/assets/static/page2/: index.html
main/inc/: dns.h  helper.h
main/scripts/: generate_static_resources.py
main/src/: dns.c  main.c
